# Portable-BAS-Toolkit

./: .env.example  .gitignore  BUGS.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  QC.md  README.md  REPLY.md  SECURITY.md  SYNC.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: PXC7-CONNECTIVITY-FINDINGS.md
public/: manifest.json  sw.js
scripts/: build-static.js  generate-icons.mjs  post-static-build.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/hooks/: use-auth-gate.ts  use-device-class.ts  use-field-panels.ts  use-global-projects.ts  use-inbox.ts  use-keyboard-shortcut.ts  use-knowledge-base.ts  use-notepad-documents.ts  use-online-users.ts  use-pid-tuning.ts  use-ppcl-documents.ts  use-project-notepad.ts  use-projects.ts  use-psychrometric-sessions.ts  use-register-calculations.ts  use-scroll-reveal.ts  use-trend-sessions.ts
src/lib/: db.ts  demo-data.ts  error-reporting.ts  global-search.ts  maintenance.ts  paywall.ts  pid-tuning-engine.ts  ppcl-language.ts  psychrometric-engine.ts  rate-limit.ts  register-utils.ts  routes.ts  storage.ts  stripe-config.ts  tauri-bridge.ts  trend-anomaly-engine.ts  trend-colors.ts  trend-csv-parser.ts  trend-downsample.ts  trend-export.ts  updater.ts  utils.ts  version.ts
src/providers/: auth-provider.tsx  sync-provider.tsx
src/store/: app-store.ts  notepad-editor-store.ts  notepad-store.ts  ppcl-editor-store.ts  terminal-store.ts  (+2 more)
supabase/: global-projects-reset.sql  global-projects-schema.sql  schema.sql
(+206 files in other folders)
