[package]
name = "bau-suite"
version = "2.4.7"
description = "BAU Suite — Portable Project Toolkit for Building Automation"
authors = ["Caleb Ohara"]
license = "MIT"
repository = "https://github.com/calebohara/Portable-BAS-Toolkit"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["process", "time", "io-util", "net"] }
