[package]
name = "bau-suite"
version = "4.7.1"
description = "BAU Suite — Portable Project Toolkit for Building Automation"
authors = ["Caleb Ohara"]
license = "MIT"
repository = "https://github.com/calebohara/Portable-BAS-Toolkit"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["process", "time", "io-util", "net"] }
serialport = "4"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
